Changes: + Reponsive rules replaced + Flex based framework set up + Sizing, margin and padding rules added + Buttons and clickable links rules added + Background color and font colors added + Font styling and sizing added

--- a/example.html
+++ b/example.html
@@ -11,14 +11,13 @@
 </head>
 <body class="font-size">
 
-    <nav class="navigation content centered">
-        <div id="logo-nav"><img id="logo-home" src="img/logo.png" alt="Buenbnb logo"></div>
-        <div id="menu-nav">
-            <!-- <h3 class="nav-item regular">Process</h3>
-            <h3 class="nav-item regular">Pricing</h3> -->
-            <h3 class="nav-item style-nav regular">How it works</h3>
-            <h3 class="nav-item" id="book-now">Book now</h3>
-
+    <nav class="f j-c-b a-i-c mx-2">
+        <div>
+            <img class="h-1 f a-i-c " src="https://wickathou.github.io/img/logo.png" alt="Buenbnb logo">
+        </div>
+        <div class="f f-c-b">
+            <h3 class="ci mx-2 style-nav light">How it works</h3>
+            <h3 class="ci">Book now</h3>
         </div>
     </nav>
 
@@ -35,11 +34,11 @@
                 <p class="style-2">Vetted cleaners to get your Airbnb ready for the next guest,<br>
                 <strong>any time, any day.</strong></p>
 
-                <button class="button-1 purple-background landing-button shadow-black"><h3 class="button-h3" id="book-now-landing-button">Book a Cleaning</h3></button>
+                <button class="button-1 shadow-black"><h3 id="book-now-landing-button">Book a Cleaning</h3></button>
                 </div>
             </div>
             <div class="head-image">
-                <img id="img-welcome" src="img/laptop - mirror.png" alt="Buenbnb cleaning">
+                <img id="img-welcome" src="https://wickathou.github.io/img/laptop%20-%20mirror.png" alt="Buenbnb cleaning">
             </div>
         </div>
     </header>
@@ -48,13 +47,13 @@
         <div class="central-content">
             <div class="style-base">
                 <h2>Airbnb cleaning made easy</h2>
-                <p class="light">Save time and never worry about cleaning again</p>
+                <p class="lighter">Save time and never worry about cleaning again</p>
             </div>
             <div class="element-centered">
                 <div class="grid-content">
                     <div class="content-item bg-secondary shadow-black">
                         <h3 class="process-step-title">People you can trust</h3>
-                        <img class="content-img" src="img/icons/TRUST.svg" alt="">
+                        <img class="content-img" src="https://wickathou.github.io/img/icons/TRUST.svg" alt="">
                         <p>
                             Our team members are all trained<br>
                             and background checked before joining.<br>
@@ -63,7 +62,7 @@
                     </div>
                     <div class="content-item bg-secondary shadow-black">
                         <h3 class="process-step-title">Always ready on time</h3>
-                        <img class="content-img" src="img/icons/RATE.svg" alt="">
+                        <img class="content-img" src="https://wickathou.github.io/img/icons/RATE.svg" alt="">
                         <p>
                             We clean before your guest arrives,<br>
                             delivering a clean space always on time.<br>
@@ -72,7 +71,7 @@
                     </div>
                     <div class="content-item bg-secondary shadow-black">
                         <h3 class="process-step-title">With products on hand</h3>
-                        <img class="content-img" src="img/icons/AMMENITIES.svg" alt="">
+                        <img class="content-img" src="https://wickathou.github.io/img/icons/AMMENITIES.svg" alt="">
                         <p>
                             You never have to worry about<br>
                             cleaning consumables, we bring it all.<br>
@@ -87,20 +86,20 @@
     <section class="content">
         <div class="bottom-content style-3">
             <div class="bottom-image">
-                <img id="img-bottom" src="img/mug and book.png" alt="Buenbnb cleaning">
+                <img id="img-bottom" src="https://wickathou.github.io/img/mug%20and%20book.png" alt="Buenbnb cleaning">
             </div>
             <div class="bottom-description">
                 <!-- Main message -->
                 <h1>All the<br>
                 <strong>details covered</strong></h1>
                 <!-- Subtitle -->
-                <p class="light">
+                <p class="lighter">
                     We strive for sparkling clean spacesevery single time we clean an space<br>
                     which is why we designed a detailed process that every team member follows.<br>
                     Check our guidelines for property cleaning to know more.
                 </p>
                 <div>
-                    <button class="button blue-background landing-button shadow-black">
+                    <button class="button-3 blue-background landing-button shadow-black">
                     <h3 class="button-h3">Book a Cleaning</h3>
                     </button>
                 </div>
@@ -109,7 +108,7 @@
     </section>
 
     <footer class="content">
-        <div class="black-background">
+        <div class="bg-footer">
             <div class="footer-content">
                 <div class="footer-text">
                     <h3><strong>Contact us</strong></h3>
