--- a/example.html
+++ b/example.html
@@ -4,91 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet/less" type="text/css" href="presnsr.less" />
     <script src="less.min.js" type="text/javascript"></script>
     <title>Buenbnb, cleaning service for Airbnb properties</title>
 </head>
 <body class="font-size">
 
-    <nav class="f j-c-b a-i-c mx-2">
-        <div>
-            <img class="h-1 f a-i-c " src="https://wickathou.github.io/img/logo.png" alt="Buenbnb logo">
-        </div>
-        <div class="f f-c-b">
-            <h3 class="ci mx-2 style-nav light">How it works</h3>
-            <h3 class="ci">Book now</h3>
-        </div>
-    </nav>
+    <header class="">
+        <nav class="f j-c-b a-i-c">
+            <img class="h-1 ci-clean" src="https://wickathou.github.io/img/logo.png" alt="Buenbnb logo">
+            <div class="f f-c-b mr-2">
+                <h3 class="ci mr-2 style-nav light">How it works</h3>
+                <h3 class="ci">Book now</h3>
+            </div>
+        </nav>
+    </header>
 
-    <header class="content">
-        <div class="top-content">
-            <div class="head-description">
-                <!-- Main message -->
-                <div class="style-1">
+    <main class="m-3">
+        <div class="f res-sm j-c-a a-i-c">
+            <!-- Main message -->
+            <div class="style-1 res min-w-3">
                 <h1>Cleaning for<br>
                 <strong>your Airbnb</strong><br>
                 made easy</h1>
-                <!-- Subtitle -->
-
                 <p class="style-2">Vetted cleaners to get your Airbnb ready for the next guest,<br>
                 <strong>any time, any day.</strong></p>
-
-                <button class="button-1 shadow-black"><h3 id="book-now-landing-button">Book a Cleaning</h3></button>
-                </div>
+                <button class="button-1 shadow-black mt-2"><h3 id="book-now-landing-button">Book a Cleaning</h3></button>
             </div>
-            <div class="head-image">
-                <img id="img-welcome" src="https://wickathou.github.io/img/laptop%20-%20mirror.png" alt="Buenbnb cleaning">
-            </div>
+            <img class="max-h-3 res min-h-1" src="https://wickathou.github.io/img/laptop%20-%20mirror.png" alt="Buenbnb cleaning">
         </div>
-    </header>
+    </main>
 
-    <main class="content">
-        <div class="central-content">
-            <div class="style-base">
-                <h2>Airbnb cleaning made easy</h2>
-                <p class="lighter">Save time and never worry about cleaning again</p>
-            </div>
-            <div class="element-centered">
-                <div class="grid-content">
-                    <div class="content-item bg-secondary shadow-black">
-                        <h3 class="process-step-title">People you can trust</h3>
-                        <img class="content-img" src="https://wickathou.github.io/img/icons/TRUST.svg" alt="">
+    <div class="res g f a-i-c">
+        <span class="go-3"></span>
+        <h3 class="g-3 min-w-2 light">✨ 10% discount for:</h3>
+        <p class="g-3 min-w-2">
+            US, Miami Beach<br>
+            Antigua and Barbuda, Saint John<br>
+            Saint Kitts and Nevis, Basseterre
+        </p>
+        <span class="go-3"></span>
+    </div>
+
+    <section class="m-3">
+        <div class="mb-2">
+            <h2>Airbnb cleaning made easy</h2>
+            <p class="lighter">Save time and never worry about cleaning again</p>
+        </div>
+        <div>
+            <div class="res f j-c-b text-center">
+                <div class="f j-c-c">
+                    <div class="w-fit bg-secondary shadow-black fc a-i-c j-c-b p-2">
+                        <h3>People you can trust</h3>
+                        <img class="min-w-1 max-w-2" src="https://wickathou.github.io/img/icons/TRUST.svg" alt="">
                         <p>
                             Our team members are all trained<br>
                             and background checked before joining.<br>
                             Your property is on good hands.
                         </p>
                     </div>
-                    <div class="content-item bg-secondary shadow-black">
-                        <h3 class="process-step-title">Always ready on time</h3>
-                        <img class="content-img" src="https://wickathou.github.io/img/icons/RATE.svg" alt="">
+                </div>
+                <div class="f j-c-c">
+                    <div class="bg-secondary shadow-black fc a-i-c j-c-b p-2">
+                        <h3>Always ready on time</h3>
+                        <img class="min-w-1 max-w-2" src="https://wickathou.github.io/img/icons/RATE.svg" alt="">
                         <p>
                             We clean before your guest arrives,<br>
                             delivering a clean space always on time.<br>
                             Sparkling clean spaces for your guests.
                         </p>
                     </div>
-                    <div class="content-item bg-secondary shadow-black">
-                        <h3 class="process-step-title">With products on hand</h3>
-                        <img class="content-img" src="https://wickathou.github.io/img/icons/AMMENITIES.svg" alt="">
+                </div>
+                <div class="f j-c-c">
+                    <div class="bg-secondary shadow-black fc a-i-c j-c-b p-2">
+                        <h3>With products on hand</h3>
+                        <img class="min-w-1 max-w-2" src="https://wickathou.github.io/img/icons/AMMENITIES.svg" alt="">
                         <p>
                             You never have to worry about<br>
                             cleaning consumables, we bring it all.<br>
                             So you never worry about cleaning.
                         </p>
                     </div>
-                </div>
+                </div>                
             </div>
         </div>
-    </main>
+    </section>
 
-    <section class="content">
-        <div class="bottom-content style-3">
-            <div class="bottom-image">
-                <img id="img-bottom" src="https://wickathou.github.io/img/mug%20and%20book.png" alt="Buenbnb cleaning">
-            </div>
-            <div class="bottom-description">
+    <section class="style-3 m-3">
+        <div class="f j-c-a a-i-c">
+            <img class="max-h-2" src="https://wickathou.github.io/img/mug%20and%20book.png" alt="Buenbnb cleaning">
+            <div>
                 <!-- Main message -->
                 <h1>All the<br>
                 <strong>details covered</strong></h1>
@@ -98,18 +104,18 @@
                     which is why we designed a detailed process that every team member follows.<br>
                     Check our guidelines for property cleaning to know more.
                 </p>
-                <div>
-                    <button class="button-3 blue-background landing-button shadow-black">
-                    <h3 class="button-h3">Book a Cleaning</h3>
+                <div class="mt-2">
+                    <button class="button-3 shadow-black">
+                        <h3>Cleaning Guidelines</h3>
                     </button>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="content">
-        <div class="bg-footer">
-            <div class="footer-content">
+    <footer class="bg-footer">
+        <div class="p-2">
+            <div class="">
                 <div class="footer-text">
                     <h3><strong>Contact us</strong></h3>
                     <p><strong>Whatsapp</strong> Mexico +529981140105</p>
@@ -117,12 +123,10 @@
                     <p><strong>Email</strong> robot@buenbnb.com</p>
                 </div>
             </div>
+            <div class="mt-2">
+                <p><strong>Buenbnb</strong> is a company of <strong>Presnsr BV</strong></p>
+            </div>
         </div>
     </footer>
-
-    
-
-    <script src="./app.js"></script>
-    <script src="./calculator.js"></script>
 </body>
 </html>
