--- a/example.html
+++ b/example.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet/less" type="text/css" href="presnsr.less" />
-    <script src="less.min.js" type="text/javascript"></script>
+    <script src="less.min.js"></script>
     <title>Buenbnb, cleaning service for Airbnb properties</title>
 </head>
 <body class="font-size">
@@ -30,7 +30,7 @@
                 made easy</h1>
                 <p class="style-2">Vetted cleaners to get your Airbnb ready for the next guest,<br>
                 <strong>any time, any day.</strong></p>
-                <button class="button-1 shadow-black mt-2"><h3 id="book-now-landing-button">Book a Cleaning</h3></button>
+                <div class="ci-clean button-1 shadow-black mt-2"><h3 id="book-now-landing-button">Book a Cleaning</h3></div>
             </div>
             <img class="max-h-3 res min-h-1" src="https://wickathou.github.io/img/laptop%20-%20mirror.png" alt="Buenbnb cleaning">
         </div>
@@ -105,9 +105,9 @@
                     Check our guidelines for property cleaning to know more.
                 </p>
                 <div class="mt-2">
-                    <button class="button-3 shadow-black">
+                    <div class="ci-clean button-3 shadow-black">
                         <h3>Cleaning Guidelines</h3>
-                    </button>
+                    </div>
                 </div>
             </div>
         </div>
